--- a/autoscaler/Webhook/pom.xml
+++ b/autoscaler/Webhook/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.nimbusrun</groupId>
-        <artifactId>AutoScaler2</artifactId>
+        <artifactId>autoscaler</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
