--- a/autoscaler/compute/Aws/pom.xml
+++ b/autoscaler/compute/Aws/pom.xml
@@ -5,7 +5,7 @@
 
     <parent>
         <groupId>com.nimbusrun</groupId>
-        <artifactId>AutoScaler2</artifactId>
+        <artifactId>autoscaler</artifactId>
         <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
@@ -41,6 +41,11 @@
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
             <version>[3.2.2,)</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
