--- a/autoscaler/autoscale/pom.xml
+++ b/autoscaler/autoscale/pom.xml
@@ -101,14 +101,19 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>com.nimbusrun</groupId>-->
+<!--            <artifactId>compute-aws</artifactId>-->
+<!--            <version>1.0.0</version>-->
+<!--        </dependency>-->
     </dependencies>
 
 
     <profiles>
         <profile>
             <id>aws</id>
-            <activation><activeByDefault>true</activeByDefault></activation>
+            <activation>
+                <activeByDefault>true</activeByDefault></activation>
             <dependencies>
                 <dependency>
                     <groupId>com.nimbusrun</groupId>
