--- a/autoscaler/ActionTracker/pom.xml
+++ b/autoscaler/ActionTracker/pom.xml
@@ -13,6 +13,8 @@
     <description>ActionTracker</description>
     <properties>
         <java.version>21</java.version>
+        <jib.main.class>com.nimbusrun.actiontracker.ActionTrackerApplication</jib.main.class>
+        <skip.jib.plugin>false</skip.jib.plugin>
     </properties>
     <dependencies>
         <dependency>
