--- a/autoscaler/Webhook/pom.xml
+++ b/autoscaler/Webhook/pom.xml
@@ -14,7 +14,7 @@
     <properties>
         <java.version>21</java.version>
         <jib.main.class>com.nimbusrun.webhook.WebhookApplication</jib.main.class>
-
+        <skip.jib.plugin>false</skip.jib.plugin>
     </properties>
     <dependencies>
         <dependency>
