--- a/autoscaler/autoscale/pom.xml
+++ b/autoscaler/autoscale/pom.xml
@@ -101,7 +101,11 @@
             <artifactId>spring-kafka-test</artifactId>
             <scope>test</scope>
         </dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>com.nimbusrun</groupId>-->
 <!--            <artifactId>compute-aws</artifactId>-->
 <!--            <version>1.0.0</version>-->
