--- a/autoscaler/Webhook/pom.xml
+++ b/autoscaler/Webhook/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.nimbusrun</groupId>
         <artifactId>autoscaler</artifactId>
-        <version>1.0.0</version>
+        <version>0.1.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>webhook</artifactId>
@@ -44,6 +44,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.nimbusrun</groupId>
+            <artifactId>common</artifactId>
+            <version>0.1.0</version>
         </dependency>
     </dependencies>
 
