--- a/autoscaler/Webhook/src/main/resources/application.yaml
+++ b/autoscaler/Webhook/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
+name:
 kafka:
   webhookTopic: test-topic
   broker: localhost:9092
 
 
 github:
-  webhook:
-    secret: test
+  webhookSecret: test
