--- a/config_examples/config-aws.yaml
+++ b/config_examples/config-aws.yaml
@@ -12,8 +12,7 @@ github:
   groupName: "prod"
   organizationName: "bourgeoisie-whacker"
   token: ${GITHUB_TOKEN}
-  webhook:
-    secret: test
+  webhookSecret: test
 
 compute:
   defaultSettings:
