--- a/autoscaler/Webhook/pom.xml
+++ b/autoscaler/Webhook/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>common</artifactId>
             <version>0.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
