--- a/config_examples/webhook/application.yaml
+++ b/config_examples/webhook/application.yaml
@@ -4,11 +4,15 @@ kafka:
   broker: localhost:9092
 github:
   webhookSecret: test
-server:
-  port: 8082
+#server:
+#  port: 8082
 
 management:
   endpoints:
     web:
       exposure:
         include: mappings
+logging:
+  level:
+    com:
+      nimbus: debug
