--- a/helm/nimbus-run/values.yaml
+++ b/helm/nimbus-run/values.yaml
@@ -2,20 +2,48 @@
 standalone: false
 
 github:
-  groupName: "prod"
+  groupName: ""
   organizationName: ""
+  # This will be stored inside the configuration file as is.
+  # When the autoscaler starts up it'll try to resolve it as an environment variable
   token: "${GITHUB_TOKEN}"
-
+  webhookSecret: "${WEBHOOK_SECRET}"
 ## You should create a kafka cluster outside of this helm chart. This makes use `auto.create.topics.enable`.
 # It doesn't take advantage of clearn.policy, retention.ms or compression.type. Take a look at strimzi-kafka-operator if
 # if you want to manage a kakfa cluster in production. https://github.com/strimzi/strimzi-kafka-operator
 kafka:
   create: false
-#  brokerOverride: # set this if using a
+#  brokerOverride: # set this if you have your own cluster setup
   webhookTopic:
     name: webhook
   retryTopic:
     name: retry
+  deployment:
+    image: apache/kafka:3.9.1
+    labels: { }
+    nodeSelector: { }
+    affinity: { }
+    tolerations: { }
+    ports:
+      client:
+        port: 9092
+        portName: client
+      controller:
+        port: 9093
+        portName: controller
+    volumes: [ ]
+    volumeMounts: [ ]
+    environmentVariables: [ ]
+    resources:
+      requests:
+        memory: "2Gi"
+        cpu: "1"
+      limits:
+        memory: "2Gi"
+        cpu: "1"
+  service:
+    annotations: { }
+    type: ClusterIP
 
 
 
@@ -127,6 +155,11 @@ compute:
           size: 15
 
 autoscaler:
+  settings:
+    name: "autoscaler"
+    logLevel: info
+    kafkaConsumerGroup: autoscaler-1
+  additionalSettings: { }
   deployment:
     image: bourgeoisiehacker/autoscaler:0.1.0
     labels: { }
@@ -154,11 +187,27 @@ autoscaler:
   service:
     annotations: {}
     port: 8080
-    type: LoadBalancer
-  settings:
-    name: "autoscaler"
-    logLevel: info
+    type: ClusterIP
+  configMap:
+    nimbusRun:
+      keyName: config.yaml
+
+
 actionTracker:
+  settings:
+    kafkaConsumerGroup: actionTracker
+    name: "ActionTracker"
+    retryPolicy:
+      # Maximum minutes a job may stay in “Queued” state before being retried
+      # Once exceeded, the job is sent to the retry topic
+      maxJobInQueuedInMinutes: 6
+
+      # Minimum minutes to wait between retry attempts for the same job
+      maxTimeBtwRetriesInMinutes: 6
+
+      # Maximum number of retry attempts per job
+      maxRetries: 3
+  additionalSettings: { }
   deployment:
     image: bourgeoisiehacker/actionTracker:0.1.0
     labels: { }
@@ -186,24 +235,22 @@ actionTracker:
   service:
     annotations: { }
     port: 8080
-    type: LoadBalancer
-  # no need to set github/kafka settings
-  settings:
-    name: "ActionTracker"
-    retryPolicy:
-      # Maximum minutes a job may stay in “Queued” state before being retried
-      # Once exceeded, the job is sent to the retry topic
-      maxJobInQueuedInMinutes: 6
-
-      # Minimum minutes to wait between retry attempts for the same job
-      maxTimeBtwRetriesInMinutes: 6
-
-      # Maximum number of retry attempts per job
-      maxRetries: 3
+    type: ClusterIP
+  configMap:
+    nimbusRun:
+      keyName: config.yaml
 
 webhook:
+  settings:
+    # Application name for metrics reporting
+    name: "Webhook"
+    github:
+      # Optional webhook secret to verify incoming requests.
+      webhookSecret: test
+    kafkaConsumerGroup: webhook
+  additionalSettings: { }
   deployment:
-    image: bourgeoisiehacker/autoscaler:0.1.0
+    image: bourgeoisiehacker/webhook:0.1.0
     labels: { }
     nodeSelector: { }
     affinity: { }
@@ -229,10 +276,8 @@ webhook:
   service:
     annotations: { }
     port: 8080
-    type: LoadBalancer
-  settings:
-    # Application name for metrics reporting
-    name: "Webhook"
-    github:
-      # Optional webhook secret to verify incoming requests.
-      webhookSecret: test
+    type: ClusterIP
+  configMap:
+    nimbusRun:
+      keyName: config.yaml
+
