--- a/helm/nimbus-run/templates/actionTracker/deployment.yaml
+++ b/helm/nimbus-run/templates/actionTracker/deployment.yaml
@@ -29,7 +29,7 @@ spec:
             - name: SERVER_PORT
               value: {{.Values.actionTracker.deployment.ports.http.port | squote}}
             - name: NIMBUS_RUN_CONFIGURATION_FILE
-              value: /{{ .Values.actionTracker.configMap.nimbusRun.keyName }}
+              value: /opt/{{ .Values.actionTracker.configMap.nimbusRun.keyName }}
             {{- with .Values.actionTracker.deployment.environmentVariables}}
               {{- toYaml . | nindent 10}}
             {{- end }}
@@ -48,7 +48,7 @@ spec:
           resources:
             {{- toYaml .Values.actionTracker.deployment.resources | nindent 12 }}
           volumeMounts:
-            - mountPath: /
+            - mountPath: /opt/
               name: {{ include "actionTracker.fullname" . }}
           {{- with .Values.actionTracker.deployment.volumeMounts }}
             {{- toYaml . | nindent 12 }}
@@ -57,6 +57,7 @@ spec:
         - name: {{ include "actionTracker.fullname" . }}
           configMap:
             name: {{ include "actionTracker.fullname" . }}
+
       {{- with .Values.actionTracker.deployment.volumes }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
