--- a/helm/nimbus-run/templates/kafka/deployment.yaml
+++ b/helm/nimbus-run/templates/kafka/deployment.yaml
@@ -17,7 +17,6 @@ spec:
       labels:
         {{- include "kafka.labels" . | nindent 8 }}
     spec:
-      serviceAccountName: {{ include "kafka.fullname" . }}
       containers:
         - name: kafka
           image: {{.Values.kafka.deployment.image }}
@@ -27,6 +26,26 @@ spec:
               containerPort: {{ .Values.kafka.deployment.ports.client.port }}
             - name: {{ .Values.kafka.deployment.ports.controller.portName }}
               containerPort: {{ .Values.kafka.deployment.ports.controller.port }}
+          env:
+            - name: KAFKA_PROCESS_ROLES
+              value: "broker,controller"
+            - name: KAFKA_NODE_ID
+              value: "1"
+            - name: KAFKA_CONTROLLER_QUORUM_VOTERS
+              value: "1@localhost:9093"
+            - name: KAFKA_LISTENERS
+              value: "PLAINTEXT://:9092,CONTROLLER://:9093"
+            - name: KAFKA_ADVERTISED_LISTENERS
+              # With headless service, pod DNS is kafka-0.kafka.<ns>.svc.cluster.local
+              value: "PLAINTEXT://{{ include "kafka-broker-url" .}}"
+            - name: KAFKA_CONTROLLER_LISTENER_NAMES
+              value: "CONTROLLER"
+            - name: KAFKA_INTER_BROKER_LISTENER_NAME
+              value: "PLAINTEXT"
+            - name: KAFKA_KRAFT_CLUSTER_ID
+              value: "abcdefghijklmnopqrstuv"
+            - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
+              value: "true"
           readinessProbe:
             tcpSocket:
               port: {{.Values.kafka.deployment.ports.client.port}}
