updating pom version

--- a/helm/nimbus-run/templates/actionTracker/deployment.yaml
+++ b/helm/nimbus-run/templates/actionTracker/deployment.yaml
@@ -16,7 +16,9 @@ spec:
       labels:
         {{- include "actionTracker.labels" . | nindent 8 }}
     spec:
+      {{- if .Values.actionTracker.serviceAccount.create}}
       serviceAccountName: {{ include "actionTracker.fullname" . }}
+      {{- end }}
       containers:
         - name: {{ .Chart.Name }}
           image: {{.Values.actionTracker.deployment.image }}
