--- a/autoscaler/ActionTracker/pom.xml
+++ b/autoscaler/ActionTracker/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.nimbusrun</groupId>
         <artifactId>autoscaler</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>action-tracker</artifactId>
@@ -41,7 +41,7 @@
         <dependency>
             <groupId>com.nimbusrun</groupId>
             <artifactId>common</artifactId>
-            <version>0.1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>io.micrometer</groupId>
