--- a/autoscaler/autoscale/pom.xml
+++ b/autoscaler/autoscale/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.nimbusrun</groupId>
         <artifactId>autoscaler</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <groupId>com.nimbusrun</groupId>
@@ -105,10 +105,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-                <dependency>
+        <dependency>
             <groupId>com.nimbusrun</groupId>
             <artifactId>common</artifactId>
-            <version>0.1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
@@ -116,12 +116,14 @@
     <profiles>
         <profile>
             <id>aws</id>
-            <activation><activeByDefault>true</activeByDefault></activation>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
             <dependencies>
                 <dependency>
                     <groupId>com.nimbusrun</groupId>
                     <artifactId>compute-aws</artifactId>
-                    <version>0.1.0</version>
+                    <version>${project.parent.version}</version>
                 </dependency>
             </dependencies>
             <build>
@@ -134,7 +136,7 @@
                 <dependency>
                     <groupId>com.nimbusrun</groupId>
                     <artifactId>compute-gcp</artifactId>
-                    <version>0.1.0</version>
+                    <version>${project.parent.version}</version>
                 </dependency>
             </dependencies>
             <build>
