--- a/autoscaler/compute/Aws/pom.xml
+++ b/autoscaler/compute/Aws/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.nimbusrun</groupId>
         <artifactId>autoscaler</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <artifactId>compute-aws</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.nimbusrun</groupId>
             <artifactId>compute-api</artifactId>
-            <version>0.1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>com.nimbusrun</groupId>
             <artifactId>common</artifactId>
-            <version>0.1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
