--- a/autoscaler/compute/Gcp/pom.xml
+++ b/autoscaler/compute/Gcp/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.nimbusrun</groupId>
         <artifactId>autoscaler</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
@@ -49,7 +49,7 @@
         <dependency>
             <groupId>com.nimbusrun</groupId>
             <artifactId>compute-api</artifactId>
-            <version>0.1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.cloud</groupId>
@@ -58,7 +58,7 @@
         <dependency>
             <groupId>com.nimbusrun</groupId>
             <artifactId>common</artifactId>
-            <version>0.1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
     </dependencies>
 
