--- a/helm/nimbus-run/templates/kafka/deployment.yaml
+++ b/helm/nimbus-run/templates/kafka/deployment.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.kafka.create}}
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: {{include "kafka.fullname" .}}
   labels:
@@ -44,6 +44,8 @@ spec:
               value: "PLAINTEXT"
             - name: KAFKA_KRAFT_CLUSTER_ID
               value: "abcdefghijklmnopqrstuv"
+            - name: KAFAK_LOG_DIR
+              value: /var/lib/kafka/data
             - name: KAFKA_AUTO_CREATE_TOPICS_ENABLE
               value: "true"
           readinessProbe:
@@ -60,8 +62,13 @@ spec:
           resources:
             {{- toYaml .| nindent 12 }}
           {{- end }}
-          {{- with .Values.kafka.deployment.volumeMounts }}
+
           volumeMounts:
+            {{- if .Values.kafka.deployment.volumeClaimTemplates.create}}
+            - name: data
+              mountPath: /var/lib/kafka/data
+            {{- end }}
+          {{- with .Values.kafka.deployment.volumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
       {{- with .Values.kafka.deployment.volumes }}
@@ -80,4 +87,14 @@ spec:
       tolerations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
+  {{- if .Values.kafka.deployment.volumeClaimTemplates.create}}
+  volumeClaimTemplates:
+    - metadata:
+        name: data
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        resources:
+          requests:
+            storage: {{.Values.kafka.deployment.volumeClaimTemplates.sizeInGigs}}
+  {{- end }}
 {{- end }}
